[tool.poetry]
name = "redis-stream"
version = "0.1.0"
description = ""
authors = ["jcf44 <johancobo236@gmail.com>"]
readme = "README.md"
packages = [{include = "redis_stream"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.5.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
